@@ -1,22 +1,18 @@
 package com.sommelier.wine4you.controller;
 
-import com.sommelier.wine4you.model.WineResponse;
-import com.sommelier.wine4you.model.dto.WineRequestDto;
-import com.sommelier.wine4you.model.dto.WineResponseDto;
+import com.sommelier.wine4you.model.dto.WineResponse;
+import com.sommelier.wine4you.model.dto.wine.WineRequestDto;
+import com.sommelier.wine4you.model.dto.wine.WineResponseDto;
 import com.sommelier.wine4you.model.mapper.impl.WineMapperImpl;
-import com.sommelier.wine4you.service.ImageService;
 import com.sommelier.wine4you.service.WineService;
 import com.sommelier.wine4you.utils.AppConstants;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.io.ByteArrayResource;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -28,7 +24,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.multipart.MultipartFile;
 
 @Api(value = "Rest APIs for Wines resources")
 @RestController
@@ -36,21 +31,19 @@ import org.springframework.web.multipart.MultipartFile;
 public class WineController {
     private final WineService wineService;
     private final WineMapperImpl wineMapper;
-    private final ImageService imageService;
 
     @Autowired
     public WineController(WineService wineService,
-                          WineMapperImpl wineMapper,
-                          ImageService imageService) {
+                          WineMapperImpl wineMapper) {
         this.wineService = wineService;
         this.wineMapper = wineMapper;
-        this.imageService = imageService;
     }
 
     @ApiOperation(value = "Create Wine REST API")
     @PreAuthorize("hasRole('ADMIN')")
     @PostMapping
-    public ResponseEntity<WineResponseDto> create(WineRequestDto wineRequestDto) {
+    public ResponseEntity<WineResponseDto> create(
+            @Valid @RequestBody WineRequestDto wineRequestDto) {
         return new ResponseEntity<>(wineMapper.toDto(
                 wineService.create(wineMapper.toModel(wineRequestDto))), HttpStatus.CREATED);
     }
@@ -58,7 +51,10 @@ public class WineController {
     @ApiOperation(value = "Get All Wines REST API")
     @GetMapping()
     public ResponseEntity<List<WineResponseDto>> getWines() {
-        return ResponseEntity.ok(wineService.getAll());
+        return ResponseEntity.ok(wineService.getAll()
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get All Wines REST API")
@@ -90,6 +86,7 @@ public class WineController {
     }
 
     @PreAuthorize("hasRole('ADMIN')")
+    @ApiOperation(value = "Update Wine By 'Id' REST API")
     @PutMapping("/{id}")
     public ResponseEntity<WineResponseDto> update(
             @PathVariable("id") Long id,
@@ -110,22 +107,20 @@ public class WineController {
     @GetMapping("/brand")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByBrand(
             @RequestParam(value = "brand") String brand) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getAllByBrand(brand).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getAllByBrand(brand)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Name wine' REST API")
     @GetMapping("/nameWine")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByNameWine(
             @RequestParam(value = "nameWine") String nameWine) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getAllByName(nameWine).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getAllByName(nameWine)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Price' REST API")
@@ -133,77 +128,68 @@ public class WineController {
     public ResponseEntity<List<WineResponseDto>> getAllWinesByPrice(
             @RequestParam(value = "min") BigDecimal min,
             @RequestParam(value = "max") BigDecimal max) {
-        return ResponseEntity.ok(wineService.getWinesByPriceBetween(min, max).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList()));
+        return ResponseEntity.ok(wineService.getWinesByPriceBetween(min, max)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Country' REST API")
     @GetMapping("/country")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByCountry(
             @RequestParam(value = "country") String country) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getByCountry(country).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getByCountry(country).stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Event' REST API")
     @GetMapping("/event")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByEvent(
             @RequestParam(value = "event") String event) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getByEvent(event).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getByEvent(event)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Type' REST API")
     @GetMapping("/type")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByType(
             @RequestParam(value = "type") String type) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getByWineType(type).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getByWineType(type)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Taste' REST API")
     @GetMapping("/taste")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByTaste(
             @RequestParam(value = "taste") String taste) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getByWineTaste(taste).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getByWineTaste(taste)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
     @ApiOperation(value = "Get wine by 'Taste' REST API")
     @GetMapping("/style")
     public ResponseEntity<List<WineResponseDto>> getAllWinesByStyle(
             @RequestParam(value = "style") String style) {
-        List<WineResponseDto> wineResponseDtos
-                = wineService.getByWineStyle(style).stream()
-                .map(wine -> wineMapper.toDto(wine))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(wineResponseDtos);
+        return ResponseEntity.ok(wineService.getByWineStyle(style)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 
-    @PostMapping("{wineId}/images")
-    public ResponseEntity<String> uploadImage(@PathVariable Long wineId,
-                                              @RequestParam("image") MultipartFile multipartImage) {
-        imageService.create(wineId, multipartImage);
-        return ResponseEntity.ok("Image uploaded successfully: "
-                + multipartImage.getOriginalFilename());
-    }
-
-    @GetMapping(value = "{wineId}/images/{imageId}", produces = MediaType.IMAGE_JPEG_VALUE)
-    public byte[] downloadImage(@PathVariable Long wineId,
-                                @PathVariable Long imageId) {
-        return new ByteArrayResource(imageService.getById(wineId, imageId)).getByteArray();
+    @ApiOperation(value = "Get wine by 'Meal' REST API")
+    @GetMapping("/meal")
+    public ResponseEntity<List<WineResponseDto>> getAllWinesByMeal(
+            @RequestParam(value = "meal") String meal) {
+        return ResponseEntity.ok(wineService.getByWineStyle(meal)
+                .stream()
+                .map(wineMapper::toDto)
+                .toList());
     }
 }
